--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <div class="social-links">
             <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
-            <a href="https://www.facebook.com/MuevetePasto" target="_blank">Facebook</a>
+            <a href="https://www.facebook.com/?sk=welcome" target="_blank">Facebook</a>
             <a href="mailto:info@muevetepasto.co">Email</a>
         </div>
     </main>
