--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
         <div class="social-links">
             <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
             <a href="https://www.facebook.com/?sk=welcome" target="_blank">Facebook</a>
+            <a href="https://www.youtube.com/channel/XXXXXXXXXXXXXXX" target="_blank">YouTube</a>
+    <a href="https://www.instagram.com/muevetepasto" target="_blank">Instagram</a>
+    <a href="https://www.tiktok.com/@muevetepasto" target="_blank">TikTok</a>
             <a href="mailto:info@muevetepasto.co">Email</a>
         </div>
     </main>
