--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
             text-decoration: none;
         }
     </style>
+    <style>
+    /* ... otros estilos existentes ... */
+
+    .readme-container {
+        text-align: center;
+        margin-top: 30px;
+    }
+    .readme-button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: #27ae60;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        transition: background-color 0.3s;
+    }
+    .readme-button:hover {
+        background-color: #2ecc71;
+    }
+</style>
 </head>
 <body>
     <header>
@@ -56,6 +77,9 @@
         </div>
 
         <a href="#" class="cta-button">Únete al Movimiento</a>
+        <div class="readme-container">
+    <a href="https://github.com/MuevetePasto/MuevetePasto/blob/main/README.md" class="readme-button" target="_blank">Leer más sobre Muévete Pasto</a>
+</div>
 
         <div class="social-links">
             <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
