--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <a href="#" class="cta-button">Únete al Movimiento</a>
         <div class="readme-container">
-    <a href="https://github.com/MuevetePasto/MuevetePasto/blob/main/README.md" class="readme-button" target="_blank">Leer más sobre Muévete Pasto</a>
+    <a href=""readme.html" class="readme-button">Leer más sobre Muévete Pasto </a>
 </div>
 
         <div class="social-links">
