--- a/index.html
+++ b/index.html
@@ -82,12 +82,15 @@
 </div>
 
         <div class="social-links">
-            <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
-            <a href="https://www.facebook.com/?sk=welcome" target="_blank">Facebook</a>
-            <a href="https://www.youtube.com/@MuevetePasto" target="_blank">YouTube</a>
-    <a href="https://www.instagram.com/muevetepasto10/">Instagram</a>
-    <a href="https://www.tiktok.com/@muevetepasto2?lang=en"_blank">TikTok</a>
-            <a href="mailto:info@muevetepasto.co">Email</a>
+            <div class="social-links">
+    <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
+    <a href="https://www.facebook.com/MuevetePasto" target="_blank">Facebook</a>
+    <a href="mailto:info@muevetepasto.co">Email</a>
+</div>
+
+<div class="readme-container">
+    <a href="README.md" class="readme-button">Leer más sobre Muévete Pasto</a>
+</div>
         </div>
     </main>
 
