--- a/redme.html
+++ b/redme.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -17,15 +17,6 @@
 </head>
 <body>
     <h1>Acerca de Muévete Pasto</h1>
-    <div id="readme-content"></div>
-
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script>
-        fetch('README.md')
-            .then(response => response.text())
-            .then(text => {
-                document.getElementById('readme-content').innerHTML = marked.parse(text);
-            });
-    </script>
+    <p>como quedaria todo</p>
 </body>
 </html>
