--- a/index.html
+++ b/index.html
@@ -82,14 +82,16 @@
 </div>
 
         <div class="social-links">
-            <div class="social-links">
     <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
     <a href="https://www.facebook.com/MuevetePasto" target="_blank">Facebook</a>
+    <a href="https://www.youtube.com/channel/XXXXXXXXXXXXXXX" target="_blank">YouTube</a>
+    <a href="https://www.instagram.com/muevetepasto" target="_blank">Instagram</a>
+    <a href="https://www.tiktok.com/@muevetepasto" target="_blank">TikTok</a>
     <a href="mailto:info@muevetepasto.co">Email</a>
 </div>
 
 <div class="readme-container">
-    <a href="README.md" class="readme-button">Leer más sobre Muévete Pasto</a>
+    <a href= "readme.html" class="readme-button">Leer más sobre Muévete Pasto</a>
 </div>
         </div>
     </main>
