--- a/index.html
+++ b/index.html
@@ -75,11 +75,10 @@
         <div class="description">
             <p>Bienvenido a <strong>Muévete Pasto</strong>, una iniciativa ciudadana independiente enfocada en transformar y mejorar la movilidad urbana en San Juan de Pasto, Colombia. Impulsados por la nobleza, el respeto y la solidaridad que nos caracterizan, nos levantamos con determinación y rebeldía propositiva para liderar el cambio que nuestra ciudad merece.</p>
         </div>
-
         <a href="#" class="cta-button">Únete al Movimiento</a>
         <div class="readme-container">
-
-        <div class="social-links">
+            <a href="readme.html" class="readme-button">Leer más sobre Muévete Pasto</a>
+    </div>
     <a href="https://twitter.com/MuevetePasto" target="_blank">Twitter</a>
     <a href="https://www.facebook.com/MuevetePasto" target="_blank">Facebook</a>
     <a href="https://www.youtube.com/channel/XXXXXXXXXXXXXXX" target="_blank">YouTube</a>
